# rs_test_root

./: .gitignore  .~lock.1_150.ods#  .~lock.1_150_no_lamp.ods#  0.5_150.in  0.5_150.out  0.5_150.point  1_150.in  1_150.ods  1_150.out  1_150.point  1_150_.in  1_150_no_lamp.ods  25d_ac.ods  CMakeLists.txt  advancedFitting.ipynb  fillrandom.root  fit_hist.py  fit_of_distribution.ipynb  main.cpp  options.info  root_test.py
.ipynb_checkpoints/: advancedFitting-checkpoint.ipynb
